[gd_scene load_steps=10 format=2]

[ext_resource path="res://Rules.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://InPlay.gd" type="Script" id=3]
[ext_resource path="res://mixkit-alarm-tone-996.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.109804, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.223529, 0.215686, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.223529, 0.215686, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.223529, 0.215686, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.109804, 0.121569, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 530, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragSplit" type="HSplitContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 10
split_offset = 600
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragSplit" type="HSplitContainer" parent="Margin/DragSplit"]
margin_right = 794.0
margin_bottom = 580.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 10

[node name="InPlay" type="Control" parent="Margin/DragSplit/DragSplit"]
margin_right = 100.0
margin_bottom = 580.0
rect_min_size = Vector2( 100, 0 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Margin/DragSplit/DragSplit/InPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin/DragSplit/DragSplit/InPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Margin/DragSplit/DragSplit/InPlay/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 95.0
margin_bottom = 575.0

[node name="List" type="VBoxContainer" parent="Margin/DragSplit/DragSplit/InPlay/Margin/Scroll"]
margin_right = 90.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Settings" type="Control" parent="Margin/DragSplit/DragSplit"]
margin_left = 110.0
margin_right = 794.0
margin_bottom = 580.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Margin/DragSplit/DragSplit/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin/DragSplit/DragSplit/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Margin/DragSplit/DragSplit/Settings/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 674.0
margin_bottom = 570.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchSetting" type="HBoxContainer" parent="Margin/DragSplit/DragSplit/Settings/Margin/List"]
margin_top = 522.0
margin_right = 664.0
margin_bottom = 542.0

[node name="Start" type="Button" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting"]
margin_right = 41.0
margin_bottom = 20.0
hint_tooltip = "Start game"
text = "Start"

[node name="Stop" type="Button" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting"]
margin_left = 45.0
margin_right = 85.0
margin_bottom = 20.0
hint_tooltip = "Stop spillet"
text = "Stop"

[node name="NewRule" type="Button" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting"]
margin_left = 89.0
margin_right = 129.0
margin_bottom = 20.0
text = "New"

[node name="Progress" type="ProgressBar" parent="Margin/DragSplit/DragSplit/Settings/Margin/List"]
margin_top = 546.0
margin_right = 664.0
margin_bottom = 560.0

[node name="Rules" type="Control" parent="Margin/DragSplit"]
margin_left = 804.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Margin/DragSplit/Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin/DragSplit/Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Split" type="VBoxContainer" parent="Margin/DragSplit/Rules/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 575.0

[node name="InfoSplit" type="HBoxContainer" parent="Margin/DragSplit/Rules/Margin/Split"]
margin_right = 190.0
margin_bottom = 20.0
custom_constants/separation = 10

[node name="Info" type="Label" parent="Margin/DragSplit/Rules/Margin/Split/InfoSplit"]
margin_top = 3.0
margin_right = 143.0
margin_bottom = 17.0
rect_min_size = Vector2( 143, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sort" type="Button" parent="Margin/DragSplit/Rules/Margin/Split/InfoSplit"]
margin_left = 153.0
margin_right = 190.0
margin_bottom = 20.0
text = "Sort"

[node name="Scroll" type="ScrollContainer" parent="Margin/DragSplit/Rules/Margin/Split"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 570.0
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Margin/DragSplit/Rules/Margin/Split/Scroll"]
margin_right = 190.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="NewRule" type="Button" parent="Margin/DragSplit/Rules/Margin/Split/Scroll/List"]
margin_right = 190.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptRule" type="ConfirmationDialog" parent="."]
margin_left = 397.755
margin_top = 258.714
margin_right = 597.755
margin_bottom = 328.714
window_title = "Bekr√¶ft venligst..."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AcceptRule"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 34.0
mouse_filter = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting/NewRule" to="." method="_on_NewRule_pressed"]
[connection signal="pressed" from="Margin/DragSplit/Rules/Margin/Split/InfoSplit/Sort" to="Margin/DragSplit/Rules" method="_on_Sort_pressed"]
[connection signal="pressed" from="Margin/DragSplit/Rules/Margin/Split/Scroll/List/NewRule" to="Margin/DragSplit/Rules" method="_on_NewRule_pressed"]
[connection signal="confirmed" from="AcceptRule" to="." method="_on_AcceptRule_confirmed"]
[connection signal="custom_action" from="AcceptRule" to="." method="_on_AcceptRule_custom_action"]
[connection signal="popup_hide" from="AcceptRule" to="." method="_on_AcceptRule_popup_hide"]
